[package]
name = "dmgwiz"
description = "Extract filesystem data from DMG files"
version = "0.1.0"
authors = ["Felix Seele <fseele@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/citruz/dmgwiz"
readme = "README.md"
keywords = ["DMG", "Apple"]
categories = ["command-line-utilities", "encoding", "filesystem", "parsing"]

[dependencies]
itertools = "0.9.0"
clap = "2.33.1"
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
ring = "0.16.15"
openssl = { version = "0.10", features = ["vendored"] }
plist = "1.0.0"
num-traits = "0.2"
num-derive = "0.3"
flate2 = "1.0.16"
bzip2 = "0.4.1"
adc = "0.1.0"
lzfse = "0.1.0"

[dev-dependencies]
file_diff = "1.0.0"

[lib]
name = "dmgwiz"
path = "src/lib.rs"

[[bin]]
name = "dmgwiz"
path = "src/main.rs"