[package]
name = "dmgwiz"
description = "Extract filesystem data from DMG files"
version = "0.2.1"
authors = ["Felix Seele <fseele@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/citruz/dmgwiz"
readme = "README.md"
keywords = ["DMG", "Apple"]
categories = ["command-line-utilities", "encoding", "filesystem", "parsing"]

[dependencies]
itertools = "0.9"
clap = "2"
bincode = "1"
byteorder = "1"
serde = { version = "1", features = ["derive"] }
ring = { version = "0.16", optional = true }
plist = "1"
num-traits = "0.2"
num-derive = "0.3"
flate2 = "1"
bzip2 = "0.4"
adc = "0.2"
lzfse = "0.1"

[dependencies.openssl]
version = "0.10"
features = ["vendored"]
optional = true

[dev-dependencies]
file_diff = "1"

[lib]
name = "dmgwiz"
path = "src/lib.rs"

[[bin]]
name = "dmgwiz"
path = "src/main.rs"
required-features = ["crypto"]

[features]
default = ["crypto"]
crypto = ["openssl", "ring"]
